# codex

./: BLOCKERS.md  CONTRIBUTING.md  README.md  covenant.json  deploy-ops-stack.sh  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: bazel.yml  cargo-deny.yml  ci.yml  issue-deduplicator.yml  issue-labeler.yml  ops-stack-ci.yml  rust-ci.yml  rust-release.yml  sdk.yml  shell-tool-mcp-ci.yml  shell-tool-mcp.yml
codex-cli/: Dockerfile
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: compile_cmd.rs  covenant.rs  main.rs  patterns_match.rs  stats.rs
codex-rs/core/src/: codex.rs  covenant.rs  lib.rs  pattern_match.rs  patterns.rs  state_db.rs
codex-rs/intent-patterns/: Cargo.toml  README.md
codex-rs/intent-patterns/src/: lib.rs
docs/: covenants.md  hardening-ops.md  sandbox.md
evez-core/: LICENSE  README.md  pyproject.toml
evez-core/evez/: __init__.py  __main__.py  cli.py  db.py  schema.py
evez-core/evez/commands/: __init__.py  about.py  init.py  observations.py
handshakeos_e/: cli.py
ops-stack/: .gitignore  INTEGRATION.md  README.md  ops-stack.ts  package.json  tsconfig.json
ops-stack/ai-engine/: README.md  index.ts
ops-stack/automation/: README.md  index.ts
ops-stack/examples/: README.md  go.mod  go_example.go  python_example.py  rust_example.rs
ops-stack/market-intelligence/: README.md  index.ts
ops-stack/monetization/: README.md  index.ts
ops-stack/notifications/: README.md  index.ts
scripts/: check_workflow_permissions.py  hardening-ops.sh
(+12 files in other folders)
