[package]
name = "codex-intent-patterns"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
